--- a/appbuilder/.env
+++ b/appbuilder/.env
@@ -50,6 +50,6 @@ PAYMENT_AUTHORIZATION_SPAN=4
 RESERVATION_EXPIRE_MINUTES=2
 CREDIT_MEMO_SHIPPING_CONFIG=true
 HOLD_AMOUNT=500
-JOURNALLING_URL=https://events-va6.adobe.io/events/organizations/48941/integrations/512536/c6dcfcda-e808-43df-95eb-39011f7934aa
+JOURNALLING_URL=
 technical_account_email=""
 technical_account_id=""
