Remove hardcoded values
Remove hardcoded values

--- a/appbuilder/env.dist
+++ b/appbuilder/env.dist
@@ -25,6 +25,7 @@ APPBUILDER_CLIENT_OAUTH_URL=https://ims-na1.adobelogin.com/ims/token/v3
 # Event and Provider Custom
 AIO_EVENTS_CUSTOM_PROVIDER_ID=
 AIO_EVENTS_ORDER_HOLD_EVENT_CODE=ibm.sterling.appbuilder.order_hold.v0
+AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE=ibm.sterling.adobe.creditmemo_process.v0
 # URLS
 OAUTH_BASE_URL=https://ims-na1.adobelogin.com/ims/token/
 IO_MANAGEMENT_BASE_URL=https://api.adobe.io/events/
