--- a/appbuilder/src/ext.config.yaml
+++ b/appbuilder/src/ext.config.yaml
@@ -56,6 +56,7 @@ runtimeManifest:
             AIO_EVENTS_API_KEY: $AIO_EVENTS_API_KEY
             AIO_EVENTS_JWT_TOKEN: $AIO_EVENTS_JWT_TOKEN
             AIO_EVENTS_CUSTOM_PROVIDER_ID: $AIO_EVENTS_CUSTOM_PROVIDER_ID
+            AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE: $AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE
             AIO_EVENTS_ORDER_HOLD_EVENT_CODE: $AIO_EVENTS_ORDER_HOLD_EVENT_CODE
             APPBUILDER_CLIENT_ID: $APPBUILDER_CLIENT_ID
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
@@ -149,6 +150,7 @@ runtimeManifest:
             AIO_EVENTS_API_KEY: $AIO_EVENTS_API_KEY
             AIO_EVENTS_JWT_TOKEN: $AIO_EVENTS_JWT_TOKEN
             AIO_EVENTS_CUSTOM_PROVIDER_ID: $AIO_EVENTS_CUSTOM_PROVIDER_ID
+            AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE: $AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE
             AIO_EVENTS_ORDER_HOLD_EVENT_CODE: $AIO_EVENTS_ORDER_HOLD_EVENT_CODE
             APPBUILDER_CLIENT_ID: $APPBUILDER_CLIENT_ID
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
@@ -184,6 +186,7 @@ runtimeManifest:
             AIO_EVENTS_API_KEY: $AIO_EVENTS_API_KEY
             AIO_EVENTS_JWT_TOKEN: $AIO_EVENTS_JWT_TOKEN
             AIO_EVENTS_CUSTOM_PROVIDER_ID: $AIO_EVENTS_CUSTOM_PROVIDER_ID
+            AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE: $AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE
             AIO_EVENTS_ORDER_HOLD_EVENT_CODE: $AIO_EVENTS_ORDER_HOLD_EVENT_CODE
             APPBUILDER_CLIENT_ID: $APPBUILDER_CLIENT_ID
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
@@ -221,6 +224,7 @@ runtimeManifest:
             AIO_EVENTS_API_KEY: $AIO_EVENTS_API_KEY
             AIO_EVENTS_JWT_TOKEN: $AIO_EVENTS_JWT_TOKEN
             AIO_EVENTS_CUSTOM_PROVIDER_ID: $AIO_EVENTS_CUSTOM_PROVIDER_ID
+            AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE: $AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE
             AIO_EVENTS_ORDER_HOLD_EVENT_CODE: $AIO_EVENTS_ORDER_HOLD_EVENT_CODE
             APPBUILDER_CLIENT_ID: $APPBUILDER_CLIENT_ID
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
@@ -329,6 +333,7 @@ runtimeManifest:
             AIO_EVENTS_API_KEY: $AIO_EVENTS_API_KEY
             AIO_EVENTS_JWT_TOKEN: $AIO_EVENTS_JWT_TOKEN
             AIO_EVENTS_CUSTOM_PROVIDER_ID: $AIO_EVENTS_CUSTOM_PROVIDER_ID
+            AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE: $AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE
             AIO_EVENTS_ORDER_HOLD_EVENT_CODE: $AIO_EVENTS_ORDER_HOLD_EVENT_CODE
             APPBUILDER_CLIENT_ID: $APPBUILDER_CLIENT_ID
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
@@ -365,6 +370,7 @@ runtimeManifest:
             AIO_EVENTS_API_KEY: $AIO_EVENTS_API_KEY
             AIO_EVENTS_JWT_TOKEN: $AIO_EVENTS_JWT_TOKEN
             AIO_EVENTS_CUSTOM_PROVIDER_ID: $AIO_EVENTS_CUSTOM_PROVIDER_ID
+            AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE: $AIO_EVENTS_ORDER_JOURNALLING_EVENT_CODE
             AIO_EVENTS_ORDER_HOLD_EVENT_CODE: $AIO_EVENTS_ORDER_HOLD_EVENT_CODE
             APPBUILDER_CLIENT_ID: $APPBUILDER_CLIENT_ID
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
