--- a/appbuilder/src/ext.config.yaml
+++ b/appbuilder/src/ext.config.yaml
@@ -108,7 +108,7 @@ runtimeManifest:
             - - files/*.p12
               - secrets/
           annotations:
-            require-adobe-auth: false
+            require-adobe-auth: true
             final: true
         StockDetailOMS:
           function: actions/StockDetailOMS/index.js
@@ -284,7 +284,7 @@ runtimeManifest:
             - - files/*.p12
               - secrets/
           annotations:
-            require-adobe-auth: false
+            require-adobe-auth: true
             final: true
         BackOrderCancelWebhook:
           function: actions/BackOrderCancelWebhook/index.js
@@ -389,7 +389,7 @@ runtimeManifest:
             - - files/*.p12
               - secrets/
           annotations:
-            require-adobe-auth: false
+            require-adobe-auth: true
             final: true
       triggers:
         everyMin:
