Updated title for .env.dist file
Updated title for .env.dist file

--- a/appbuilder/env.dist
+++ b/appbuilder/env.dist
@@ -1,24 +1,31 @@
 AIO_runtime_auth=
 AIO_runtime_namespace=
 AIO_runtime_apihost=https://adobeioruntime.net
+#this value available from JSON file downloaded through workspace --> Downlaod all (oauth_server_to_server.client_id)
 SERVICE_API_KEY=
 #OMS Details
+#Pwd can be retrieved Selfservice --> Environment --> Select Environment --> Certificate -->
 OMS_CLIENT_CERT_PASS=
+#Base URL refer from OMS Selfservice --> Environment --> Select Environment --> Copy from Environment details/order #management
 OMS_API_BASE_URL=
 OMS_USERNAME=
 OMS_PASSWORD=
 OMS_ADMIN_USERNAME=
 OMS_ADMIN_PASSWORD=
 #Adobe Commerce
+#Can find from Commerce cloud
 COMMERCE_BASE_URL=
+#From Commerce Admin --> System --> Create New integration and activate --> Click on edit integration --> find details under #Integration Details
 COMMERCE_CONSUMER_KEY=
 COMMERCE_CONSUMER_SECRET=
 COMMERCE_ACCESS_TOKEN=
 COMMERCE_ACCESS_TOKEN_SECRET=
 # AppBuilder
+#this value available from JSON file downloaded through workspace --> Downlaod all --> project.org.ims_org_id
 AIO_EVENTS_ORG_ID=
 AIO_EVENTS_API_KEY=
 APPBUILDER_CLIENT_ID=
+#this value available from JSON file downloaded through workspace --> Downlaod all (oauth_server_to_server.client_secrets[0])
 APPBUILDER_CLIENT_SECRET=
 APPBUILDER_CLIENT_SCOPE=adobeio_api,openid,read_client_secret,AdobeID,read_organizations,additional_info.roles,manage_client_secrets,additional_info.projectedProductContext,event_receiver_api
 APPBUILDER_CLIENT_OAUTH_URL=https://ims-na1.adobelogin.com/ims/token/v3
@@ -39,11 +46,14 @@ OAUTH_SCOPES=AdobeID,openid,read_organizations,additional_info.projectedProductC
 # The following values can be copied from the JSON downloadable in AppBuilder from Organization > Project > Workspace
 # IO_CONSUMER corresponds to project.org.id
 # IO_PROJECT_ID corresponds to project.id
-# IO_WORKSPACE_ID corresponds to project.workspace.id
-# AppBuilder Details
-IO_CONSUMER_ID=
-IO_PROJECT_ID=
+# corresponds to project.workspace.id
 IO_WORKSPACE_ID=
+# AppBuilder Details
+# this value available from JSON file downloaded through workspace --> Downlaod all (project.org.id)
+IO_CONSUMER_ID=
+# This value available from JSON file downloaded through workspace (project.id)
+IO_PROJECT_ID=
+# This value available from JSON file downloaded through workspace (project.workspace.id)
 SCHEDULE_MINUTES_HOLD_OMS=1
 # Add Configuration for Shipment Invoice generated true false , by default it is YES/True
 # Auto Generated based on Workspace Selection
@@ -51,6 +61,6 @@ PAYMENT_AUTHORIZATION_SPAN=4
 RESERVATION_EXPIRE_MINUTES=2
 CREDIT_MEMO_SHIPPING_CONFIG=true
 HOLD_AMOUNT=500
-JOURNALLING_URL=https://events-va6.adobe.io/events/organizations/48941/integrations/512536/c6dcfcda-e808-43df-95eb-39011f7934aa
+JOURNALLING_URL=
 technical_account_email=""
 technical_account_id=""
