Removed OMS_ADMIN_USERNAME
Removed OMS_ADMIN_USERNAME

--- a/appbuilder/src/ext.config.yaml
+++ b/appbuilder/src/ext.config.yaml
@@ -62,8 +62,8 @@ runtimeManifest:
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
             APPBUILDER_CLIENT_SCOPE: $APPBUILDER_CLIENT_SCOPE
             APPBUILDER_CLIENT_OAUTH_URL: $APPBUILDER_CLIENT_OAUTH_URL
-            OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
-            OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            # OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
+            # OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
             COMMERCE_BASE_URL: $COMMERCE_BASE_URL
             COMMERCE_CONSUMER_KEY: $COMMERCE_CONSUMER_KEY
             COMMERCE_CONSUMER_SECRET: $COMMERCE_CONSUMER_SECRET
@@ -87,8 +87,8 @@ runtimeManifest:
             OMS_CLIENT_CERT_PASS: $OMS_CLIENT_CERT_PASS
             OMS_USERNAME: $OMS_USERNAME
             OMS_PASSWORD: $OMS_PASSWORD
-            OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
-            OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            # OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
+            # OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
             COMMERCE_BASE_URL: $COMMERCE_BASE_URL
             COMMERCE_CONSUMER_KEY: $COMMERCE_CONSUMER_KEY
             COMMERCE_CONSUMER_SECRET: $COMMERCE_CONSUMER_SECRET
@@ -108,8 +108,10 @@ runtimeManifest:
             LOG_LEVEL: debug
             OMS_API_BASE_URL: $OMS_API_BASE_URL
             OMS_CLIENT_CERT_PASS: $OMS_CLIENT_CERT_PASS
-            OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
-            OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            # OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
+            # OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            OMS_USERNAME: $OMS_USERNAME
+            OMS_PASSWORD: $OMS_PASSWORD
           include:
             - - files/*.p12
               - secrets/
@@ -124,8 +126,10 @@ runtimeManifest:
             LOG_LEVEL: debug
             OMS_API_BASE_URL: $OMS_API_BASE_URL
             OMS_CLIENT_CERT_PASS: $OMS_CLIENT_CERT_PASS
-            OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
-            OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            # OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
+            # OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            OMS_USERNAME: $OMS_USERNAME
+            OMS_PASSWORD: $OMS_PASSWORD
           include:
             - - files/*.p12
               - secrets/
@@ -162,8 +166,8 @@ runtimeManifest:
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
             APPBUILDER_CLIENT_SCOPE: $APPBUILDER_CLIENT_SCOPE
             APPBUILDER_CLIENT_OAUTH_URL: $APPBUILDER_CLIENT_OAUTH_URL
-            OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
-            OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            # OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
+            # OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
             COMMERCE_BASE_URL: $COMMERCE_BASE_URL
             COMMERCE_CONSUMER_KEY: $COMMERCE_CONSUMER_KEY
             COMMERCE_CONSUMER_SECRET: $COMMERCE_CONSUMER_SECRET
@@ -198,8 +202,8 @@ runtimeManifest:
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
             APPBUILDER_CLIENT_SCOPE: $APPBUILDER_CLIENT_SCOPE
             APPBUILDER_CLIENT_OAUTH_URL: $APPBUILDER_CLIENT_OAUTH_URL
-            OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
-            OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            # OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
+            # OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
             COMMERCE_BASE_URL: $COMMERCE_BASE_URL
             COMMERCE_CONSUMER_KEY: $COMMERCE_CONSUMER_KEY
             COMMERCE_CONSUMER_SECRET: $COMMERCE_CONSUMER_SECRET
@@ -236,8 +240,8 @@ runtimeManifest:
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
             APPBUILDER_CLIENT_SCOPE: $APPBUILDER_CLIENT_SCOPE
             APPBUILDER_CLIENT_OAUTH_URL: $APPBUILDER_CLIENT_OAUTH_URL
-            OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
-            OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            # OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
+            # OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
             COMMERCE_BASE_URL: $COMMERCE_BASE_URL
             COMMERCE_CONSUMER_KEY: $COMMERCE_CONSUMER_KEY
             COMMERCE_CONSUMER_SECRET: $COMMERCE_CONSUMER_SECRET
@@ -279,8 +283,8 @@ runtimeManifest:
             OMS_CLIENT_CERT_PASS: $OMS_CLIENT_CERT_PASS
             OMS_USERNAME: $OMS_USERNAME
             OMS_PASSWORD: $OMS_PASSWORD
-            OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
-            OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            # OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
+            # OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
             COMMERCE_BASE_URL: $COMMERCE_BASE_URL
             COMMERCE_CONSUMER_KEY: $COMMERCE_CONSUMER_KEY
             COMMERCE_CONSUMER_SECRET: $COMMERCE_CONSUMER_SECRET
@@ -311,8 +315,10 @@ runtimeManifest:
             apiKey: $SERVICE_API_KEY
             OMS_API_BASE_URL: $OMS_API_BASE_URL
             OMS_CLIENT_CERT_PASS: $OMS_CLIENT_CERT_PASS
-            OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
-            OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            # OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
+            # OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            OMS_USERNAME: $OMS_USERNAME
+            OMS_PASSWORD: $OMS_PASSWORD
             COMMERCE_BASE_URL: $COMMERCE_BASE_URL
             COMMERCE_CONSUMER_KEY: $COMMERCE_CONSUMER_KEY
             COMMERCE_CONSUMER_SECRET: $COMMERCE_CONSUMER_SECRET
@@ -345,8 +351,8 @@ runtimeManifest:
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
             APPBUILDER_CLIENT_SCOPE: $APPBUILDER_CLIENT_SCOPE
             APPBUILDER_CLIENT_OAUTH_URL: $APPBUILDER_CLIENT_OAUTH_URL
-            OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
-            OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            # OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
+            # OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
             COMMERCE_BASE_URL: $COMMERCE_BASE_URL
             COMMERCE_CONSUMER_KEY: $COMMERCE_CONSUMER_KEY
             COMMERCE_CONSUMER_SECRET: $COMMERCE_CONSUMER_SECRET
@@ -382,8 +388,8 @@ runtimeManifest:
             APPBUILDER_CLIENT_SECRET: $APPBUILDER_CLIENT_SECRET
             APPBUILDER_CLIENT_SCOPE: $APPBUILDER_CLIENT_SCOPE
             APPBUILDER_CLIENT_OAUTH_URL: $APPBUILDER_CLIENT_OAUTH_URL
-            OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
-            OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
+            # OMS_ADMIN_USERNAME: $OMS_ADMIN_USERNAME
+            # OMS_ADMIN_PASSWORD: $OMS_ADMIN_PASSWORD
             COMMERCE_BASE_URL: $COMMERCE_BASE_URL
             COMMERCE_CONSUMER_KEY: $COMMERCE_CONSUMER_KEY
             COMMERCE_CONSUMER_SECRET: $COMMERCE_CONSUMER_SECRET
